# shield-receiver

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  database.py  dev-requirements.txt  docker-compose.yml  generate_grpc.sh  grpc_receiver_service.py  pyproject.toml  requirements.txt  sync_service.proto
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  lint.yml  release.yml  test.yml  trivy.yml
k8s/: deploy.yaml  deployment.yaml  namespace.yaml  pvc.yaml  rbac.yaml  service.yaml
tests/: conftest.py  test_database_factory.py  test_database_mongo_unit.py  test_database_postgres_unit.py  test_postgres_integration.py  test_service_unit.py
