[project]
requires-python = ">=3.12"
name = "shield-receiver"
version = "0.1"
description = "Shield Receiver"
dependencies = [
  "grpcio",
  "grpcio-tools",
  "protobuf",
  "pymongo",
  "python-dotenv"
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "validate-pyproject"
]

dev-dependencies = [
  "black",
  "ruff", 
  "validate-pyproject"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable:
# - Pycodestyle ("E")
# - Pyflakes ("F")
# - Pydocstyle ("D)
# - flake8-bugbear ("B")
# - Isort ("I")
select = ["E", "F", "D", "B", "I"]
ignore = ["D100","D101","D102","D103","D104","D107","D211", "D213", "D400", "D415"]